--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h1>João Pedro</h1>
 
-        <a href="http://instagram.com/j0tappe">
+        <a href="http://github.com/j0tappe">
           <img src="images/github.svg" alt="Github logo" />
           j0tappe
         </a>
@@ -34,39 +34,23 @@
 
         <ul>
           <li>
-            <a href="http://youtube.com/maykbrito">
-              <img
-                src="images/youtube.svg"
-                alt="Youtube logo"
-                target="_blank"
-              />
+            <a href="http://youtube.com/maykbrito" target="_blank">
+              <img src="images/youtube.svg" alt="Youtube logo" />
             </a>
           </li>
           <li>
-            <a href="http://instagram.com/j0tappe">
-              <img
-                src="images/instagram.svg"
-                alt="Instagram logo"
-                target="_blank"
-              />
+            <a href="http://instagram.com/j0tappe" target="_blank">
+              <img src="images/instagram.svg" alt="Instagram logo" />
             </a>
           </li>
           <li>
-            <a href="http://facebook.com/j0tappe">
-              <img
-                src="images/facebook.svg"
-                alt="facebook logo"
-                target="_blank"
-              />
+            <a href="http://facebook.com/j0tappe" target="_blank">
+              <img src="images/facebook.svg" alt="facebook logo" />
             </a>
           </li>
           <li>
-            <a href="http://twitter.com/j0tappe">
-              <img
-                src="images/twitter.svg"
-                alt="Twitter logo"
-                target="_blank"
-              />
+            <a href="http://twitter.com/j0tappe" target="_blank">
+              <img src="images/twitter.svg" alt="Twitter logo" />
             </a>
           </li>
         </ul>
