--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h1>João Pedro</h1>
 
-        <a href="http://github.com/j0tappe">
+        <a href="http://github.com/j0tappe" target="_blank">
           <img src="images/github.svg" alt="Github logo" />
           j0tappe
         </a>
@@ -56,5 +56,21 @@
         </ul>
       </div>
     </main>
+
+    <script>
+      function showMeSomething() {
+        alert(links.instagram);
+      }
+
+      const links = {
+        github: "j0tappe",
+        facebook: "j0tappe",
+        instagram: "j0tappe",
+        youtube: "j0tappe",
+        twitter: "j0tappe",
+      };
+
+      showMeSomething();
+    </script>
   </body>
 </html>
