--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img src="http://lorempixel.com/185/185/people/" alt="Foto pessoal" />
         </div>
 
-        <h1>João Pedro</h1>
+        <h1 id="userName">João Pedro</h1>
 
         <a href="http://github.com/j0tappe" target="_blank">
           <img src="images/github.svg" alt="Github logo" />
@@ -58,11 +58,7 @@
     </main>
 
     <script>
-      function showMeSomething() {
-        alert(links.instagram);
-      }
-
-      const links = {
+      const linksSocialMedia = {
         github: "j0tappe",
         facebook: "j0tappe",
         instagram: "j0tappe",
@@ -70,7 +66,9 @@
         twitter: "j0tappe",
       };
 
-      showMeSomething();
+      function changeSocialMediaLinks() {}
+
+      changeSocialMediaLinks();
     </script>
   </body>
 </html>
