--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1 id="userName">João Pedro</h1>
         <a id="userProfile" href="http://github.com/j0tappe" target="_blank">
           <img src="images/github.svg" alt="Github logo" />
-          <span id="userLogin">maykbrito</span>
+          <span id="userLogin">j0tappe</span>
         </a>
 
         <p id="userBio">
