--- a/index.html
+++ b/index.html
@@ -24,39 +24,39 @@
           </span>
           <img
             id="userPhoto"
-            src="https://github.com/j0tappe.png"
+            src="https://lorempixel.com/185/185/people/"
             alt="Foto pessoal"
           />
         </div>
 
-        <h1 id="userName">João Pedro</h1>
+        <h1 id="userName">Name</h1>
         <a id="userProfile" href="http://github.com/j0tappe" target="_blank">
           <img src="images/github.svg" alt="Github logo" />
-          <span id="userLogin">maykbrito</span>
+          <span id="userLogin">User Name</span>
         </a>
 
         <p id="userBio">
-          An systems support analyst at CESMAC | Front-end Junior developer
+          Bio description
         </p>
 
         <ul id="socialLinks">
           <li class="linkedin">
-            <a href="https://www.linkedin.com/in/maykbrito" target="_blank">
+            <a href="https://www.linkedin.com/in/user" target="_blank">
               <img src="images/linkedin.svg" alt="Linkedin logo" />
             </a>
           </li>
           <li class="instagram">
-            <a href="http://instagram.com/maykbrito" target="_blank">
+            <a href="http://instagram.com/user" target="_blank">
               <img src="images/instagram.svg" alt="Instagram logo" />
             </a>
           </li>
           <li class="facebook">
-            <a href="http://facebook.com/maykbrito" target="_blank">
+            <a href="http://facebook.com/user" target="_blank">
               <img src="images/facebook.svg" alt="facebook logo" />
             </a>
           </li>
           <li class="twitter">
-            <a href="http://twitter.com/maykbrito" target="_blank">
+            <a href="http://twitter.com/user" target="_blank">
               <img src="images/twitter.svg" alt="Twitter logo" />
             </a>
           </li>
