--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </a>
           </li>
           <li class="twitter">
-            <a href="http://twitter.com/user" target="_blank">
+            <a href="http://twitter.com/j0tappe" target="_blank">
               <img src="images/twitter.svg" alt="Twitter logo" />
             </a>
           </li>
@@ -64,6 +64,6 @@
       </div>
     </main>
 
-    <script src="main.js" />
+    <script src="main.js"></script>
   </body>
 </html>
