--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <img src="images/build.svg" alt="Selo Rocketseat" />
           </span>
           <img
-            id="userPhoto"
+            id="userImage"
             src="https://lorempixel.com/185/185/people/"
             alt="Foto pessoal"
           />
         </div>
 
         <h1 id="userName">Name</h1>
-        <a id="userProfile" href="http://github.com/j0tappe" target="_blank">
+        <a id="userLink" href="http://github.com/j0tappe" target="_blank">
           <img src="images/github.svg" alt="Github logo" />
           <span id="userLogin">User Name</span>
         </a>
