--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <h1 id="userName">Name</h1>
-        <a id="userLink" href="http://github.com/j0tappe" target="_blank">
+        <a id="userLink" href="https://github.com/j0tappe" target="_blank">
           <img src="images/github.svg" alt="Github logo" />
           <span id="userLogin">User Name</span>
         </a>
@@ -46,17 +46,17 @@
             </a>
           </li>
           <li class="instagram">
-            <a href="http://instagram.com/user" target="_blank">
+            <a href="https://instagram.com/user" target="_blank">
               <img src="images/instagram.svg" alt="Instagram logo" />
             </a>
           </li>
           <li class="facebook">
-            <a href="http://facebook.com/user" target="_blank">
+            <a href="https://facebook.com/user" target="_blank">
               <img src="images/facebook.svg" alt="facebook logo" />
             </a>
           </li>
           <li class="twitter">
-            <a href="http://twitter.com/j0tappe" target="_blank">
+            <a href="https://twitter.com/j0tappe" target="_blank">
               <img src="images/twitter.svg" alt="Twitter logo" />
             </a>
           </li>
