--- a/index.html
+++ b/index.html
@@ -35,29 +35,43 @@
           <span id="userLogin">User Name</span>
         </a>
 
-        <p id="userBio">
-          Bio description
-        </p>
+        <p id="userBio">Bio description</p>
 
         <ul id="socialLinks">
           <li class="linkedin">
             <a href="https://www.linkedin.com/in/user" target="_blank">
-              <img src="images/linkedin.svg" alt="Linkedin logo" />
+              <img
+                class="linkedin-img"
+                src="images/linkedin.svg"
+                alt="Linkedin logo"
+              />
             </a>
           </li>
           <li class="instagram">
             <a href="https://instagram.com/user" target="_blank">
-              <img src="images/instagram.svg" alt="Instagram logo" />
+              <img
+                class="instagram-img"
+                src="images/instagram.svg"
+                alt="Instagram logo"
+              />
             </a>
           </li>
           <li class="facebook">
             <a href="https://facebook.com/user" target="_blank">
-              <img src="images/facebook.svg" alt="facebook logo" />
+              <img
+                class="facebook-img"
+                src="images/facebook.svg"
+                alt="facebook logo"
+              />
             </a>
           </li>
           <li class="twitter">
             <a href="https://twitter.com/j0tappe" target="_blank">
-              <img src="images/twitter.svg" alt="Twitter logo" />
+              <img
+                class="twitter-img"
+                src="images/twitter.svg"
+                alt="Twitter logo"
+              />
             </a>
           </li>
         </ul>
